force-app/main/default/objects/Articolo__c/Articolo__c.object-meta.xml
<CustomObject>
    <label>Articolo</label>
    <nameField>
        <label>Nome Articolo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Articoli</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>