force-app/main/default/objects/Articolo__c/fields/Codice_articolo__c.field-meta.xml
<CustomField>
    <fullName>Codice_articolo__c</fullName>
    <externalId>true</externalId>
    <label>Codice articolo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>