force-app/main/default/objects/Articolo__c/fields/Descrizione_articolo__c.field-meta.xml
<CustomField>
    <fullName>Descrizione_articolo__c</fullName>
    <label>Descrizione articolo</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>