force-app/main/default/objects/Articolo__c/fields/Famiglia_articolo__c.field-meta.xml
<CustomField>
    <fullName>Famiglia_articolo__c</fullName>
    <label>Famiglia articolo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accessori</fullName>
            </value>
            <value>
                <fullName>Macchina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>